--- a/React-Query/my-app/package.json
+++ b/React-Query/my-app/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-devtools": "^5.80.10",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
